--- a/package.json
+++ b/package.json
@@ -1,64 +1,36 @@
 {
-  "name": "ckhedge_frontend",
-  "version": "0.2.0",
-  "description": "Internet Computer starter application",
-  "keywords": [
-    "Internet Computer",
-    "Motoko",
-    "JavaScript",
-    "Canister"
-  ],
-  "scripts": {
-    "start": "run-p frontend",
-    "frontend": "vite --port 3000",
-    "backend": "dfx deploy ckhedge_backend",
-    "build": "tsc && vite build",
-    "deploy:local": "dfx deploy --network=local",
-    "deploy:ic": "dfx deploy --network=ic",
-    "generate": "dfx generate ckhedge_backend"
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   },
+  "name": "ckhedge",
+  "scripts": {
+    "build": "npm run build --workspaces --if-present",
+    "prebuild": "npm run prebuild --workspaces --if-present",
+    "pretest": "npm run prebuild --workspaces --if-present",
+    "start": "npm start --workspaces --if-present",
+    "test": "npm test --workspaces --if-present"
+  },
+  "type": "module",
+  "workspaces": [
+    "src/ckhedge_landing",
+    "src/dashboard"
+  ],
   "dependencies": {
-    "@dfinity/agent": "^0.20.2",
-    "@dfinity/auth-client": "^0.20.2",
-    "@dfinity/candid": "^0.20.2",
-    "@dfinity/principal": "^0.20.2",
-    "ic-websocket-js": "^0.3.2",
-    "postcss-loader": "^7.3.3",
-    "process": "^0.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0",
-    "react-toastify": "^9.1.3",
-    "vite-plugin-top-level-await": "^1.4.1"
+    "@dfinity/agent": "^2.1.2",
+    "@dfinity/auth-client": "^2.1.2",
+    "@dfinity/candid": "^2.1.2",
+    "@dfinity/identity": "^2.1.2",
+    "@dfinity/principal": "^2.1.2",
+    "autoprefixer": "^10.4.20",
+    "postcss-loader": "^8.1.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.16",
-    "bignumber.js": "^9.1.1",
-    "cross-fetch": "^3.1.6",
-    "dotenv": "^16.3.1",
-    "jsdom": "^22.1.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.31",
-    "prettier": "^2.8.8",
-    "sass": "^1.63.6",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vite-plugin-environment": "^1.1.3",
-    "vitest": "^0.32.2"
-  },
-  "engines": {
-    "node": "^12 || ^14 || ^16 || >=17",
-    "npm": "^7.17 || >=8"
-  },
-  "browserslist": [
-    "last 2 chrome version",
-    "last 2 firefox version",
-    "last 2 safari version",
-    "last 2 edge version"
-  ]
+    "@types/node": "^22.7.9"
+  }
 }
