--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
     "src/ckhedge_frontend"
   ],
   "dependencies": {
-    "@dfinity/agent": "^2.1.2",
-    "@dfinity/auth-client": "^2.1.2",
-    "@dfinity/candid": "^2.1.2",
-    "@dfinity/identity": "^2.1.2",
-    "@dfinity/principal": "^2.1.2",
+    "@dfinity/agent": "^2.1.3",
+    "@dfinity/auth-client": "^2.1.3",
+    "@dfinity/candid": "^2.1.3",
+    "@dfinity/identity": "^2.1.3",
+    "@dfinity/ledger-icp": "^2.6.2",
+    "@dfinity/principal": "^2.1.3",
+    "@dfinity/utils": "^2.6.0",
+    "@nfid/identitykit": "^1.0.1",
     "autoprefixer": "^10.4.20",
     "postcss-loader": "^8.1.1",
+    "react-apexcharts": "^1.5.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.13"
-  },
-  "devDependencies": {
-    "@types/node": "^22.7.9"
   }
 }
