--- a/src/ckhedge_frontend/package.json
+++ b/src/ckhedge_frontend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.3.1",
     "sass": "^1.63.6",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "@types/node": "^22.8.5",
+    "vite": "^5.4.10",
     "vite-plugin-environment": "^1.1.3"
   }
 }
