feat wallets intergration

--- a/src/ckhedge_frontend/tsconfig.json
+++ b/src/ckhedge_frontend/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["../../node_modules/@types", "./src"],
+    "typeRoots": ["../../node_modules/@types", "./src", "./src/types"],
     "types": ["node"]
   },
   "include": ["src", "src/App.tsx", "src/vite-env.d.ts"]
