--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "@dfinity/ledger-icp": "^2.6.2",
     "@dfinity/principal": "^2.1.3",
     "@dfinity/utils": "^2.6.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@infu/icblast": "^2.1.0",
+    "@mui/material": "^6.1.6",
     "@nfid/identitykit": "^1.0.1",
+    "@psychedelic/dab-js": "^1.6.0-alpha.2",
+    "@walletconnect/browser-utils": "^1.8.0",
     "autoprefixer": "^10.4.20",
     "postcss-loader": "^8.1.1",
     "react-apexcharts": "^1.5.0",
